--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "style-loader": "^0.8.2",
     "stylus-loader": "^0.4.0",
     "webpack": "^1.4.13",
-    "webpack-dev-server": "^1.6.6"
+    "webpack-dev-server": "^1.6.6",
+    "react": ">=0.14.0 || >=15.0.0-0",
+    "react-dom": ">=0.14.0 || >=15.0.0-0"
   },
   "peerDependencies": {
     "react": ">=0.14.0 || >=15.0.0-0",
